Display scrollbar in the catalog to prevent blinking (#2407)

--- a/dashboard/src/components/Catalog/Catalog.scss
+++ b/dashboard/src/components/Catalog/Catalog.scss
@@ -33,3 +33,7 @@
   margin-top: 2rem;
   text-align: center;
 }
+
+.kubeapps-main-container .content-area {
+  overflow-y: scroll;
+}
